lintとformatをきっちり分けた

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,9 @@
 {
-  "*.{ts,js,json,md}": [
+  "*.js": [
+    "eslint --fix",
+    "git add"
+  ],
+  "*.{json,md}": [
     "prettier --write",
     "git add"
   ]
