--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"**/*.{js,json,md}\"",
-    "lint": "eslint . --ext .js",
+    "format": "prettier --write \"**/*.{ts,js,json,md}\"",
+    "lint": "eslint . --ext .ts,.js",
     "test": "jest"
   },
   "repository": {
